[project]
name = "solomonoff"
version = "0.1.0"
description = "priors, kolmogorov complexity, all that jazz."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
minihack = [
    "minihack @ git+https://github.com/samvelyan/minihack.git@95b11cc8db68d72a7fe6e7540e75b568b7a811d8",
    "nle==1.3.0",
    "setuptools<81",
    "simple-parsing>=0.1.7",
    "pillow>=10.0.0",
]

[tool.uv]
workspace = { members = ["refs/PFNs"] }

[tool.uv.extra-build-variables]
nle = { CMAKE_POLICY_VERSION_MINIMUM = "3.5" }
